# FileDrive

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
filedrive/: conftest.py  manage.py  report.html
filedrive/Selenium_testing/: README.md  file_management.py  login_test.py  other_testing.py  requirements.txt  test_suit.py  testing.py
filedrive/allure-report/: index.html
filedrive/allure-results/: 0229055f-b28b-4ac3-965d-8e4ac4573dd8-container.json  0316a7f1-2209-486d-9f9f-d7ec6021b522-container.json  03cb2239-8d49-4501-b209-71633cff09de-container.json  0488e587-66dc-4230-b86b-d6fd3b842fb6-container.json  049f9a85-6812-4d44-a579-e8b56afa579b-container.json  0502ba2a-fe76-4887-a26d-d71d394c42c7-container.json  07223a6b-26d7-4397-a34b-bba972c3dacf-result.json  0736d40a-a872-4d0a-8139-725f1fda1b14-container.json  091e8462-3268-44da-9544-ac9edeb7041b-container.json  0cb8afc8-75f1-4e67-bc89-e1eff3259654-result.json  0d46325f-e67a-411f-b73f-f7e668b94d81-container.json  0da81e9b-e7ff-4c9e-89cd-c6d8819f3926-container.json  0dcefd6e-e758-4475-bff8-f9daec0ed398-container.json  0de2de46-d4fb-48c0-9738-a2e2e89d61f6-container.json  0e228507-29fe-41c2-a20c-7173c0b82698-container.json  0e6f7f29-1d65-4eea-bd65-ea1a24b91746-container.json  0f0aad0e-4f20-41f8-8daa-0281ab9573f2-container.json  11f70e59-0569-4b4c-aa30-44c1380ff754-container.json  13d41f79-1f47-4fbd-a28a-b1e8c94b5faf-container.json  14951ce8-5f63-4460-98ff-e22a28d252e9-container.json  15a4e72f-e8dd-46eb-9067-cb52a171bddf-container.json  15e0e1f2-0a9d-4fda-862e-e90c6b6ad41c-container.json  16f8d9a4-41cc-482d-b3fb-ff12b8cd6cdf-container.json  185ac169-1555-43b7-bbcd-eb840f5cf7c5-container.json  1b1b6fe3-94c2-40c1-bdb6-b4a08515fba1-container.json  1bf73505-c5da-4323-9032-8479c2e89410-result.json  1dd26d7b-d9ac-4b0c-bce9-71f6f2d11afa-container.json  1fd7baa0-dbb4-465e-941e-693161a63b4e-container.json  2074093f-f89a-467c-a7fe-19f39fb053ad-container.json  2307c811-fa85-4811-87d6-b3edf7e8e941-container.json  23d81dda-efc4-4b83-980e-3f42c16c1d35-container.json  242f4570-a2e7-4b24-a8ad-5310b0f6c227-container.json  24ad7f42-f35e-46f3-946f-8b65cd293727-container.json  24b02505-ad8e-4562-a8d1-a94a025dae79-container.json  26836c05-b118-4c15-ba90-f0ee0c673ad6-container.json  (+215 more)
requirements/: base.txt  development.txt
(+47 files in other folders)
