[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "filedrive.settings.development"

[tool.black]
line-length = 120

[tool.bandit]
skips = ["B101"]

[tool.vulture]
exclude = ["migrations/"]
min_confidence = 65
sort_by_size = true

[tool.djlint]
profile = "django"
format_css = true
format_js = true
use_gitignore = true


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "filedrive.settings.development"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py", "tests.py"]
addopts = "--verbose --ignore=Selenium_testing --html=report.html --self-contained-html --cov=. --cov-report=html --cov-branch --alluredir=allure-results"

[tool.uv]
dev-dependencies = [
    "bandit[toml]==1.7.10",
    "black==24.10.0",
    "django-debug-toolbar==4.4.6",
    "flake8-bugbear==24.10.31",
    "flake8-builtins==2.5.0",
    "flake8-cognitive-complexity==0.1.0",
    "flake8-comprehensions==3.16.0",
    "flake8==7.1.1",
    "pep8-naming==0.14.1",
    "pre-commit==4.0.1",
    "reorder-python-imports==3.14.0",
    "vulture==2.13",
]

[project]
name = "FileDrive"
version = "0.1.0"
description = "File Drive"
dependencies = [
    "django-htmx==1.19.0",
    "django-safedelete==1.4.0",
    "django-stubs[compatible-mypy]==5.1.0",
    "django-unfold==0.41.0",
    "django[argon2]==5.1.2",
    "pre-commit>=4.0.1",
    "pytest-django==4.9.0",
    "python-dotenv==1.0.1",
]
